# libdimpl

./: Cargo.toml  test.c
src/: lib.rs
