[package]
name = "dimpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "string"] }
libafl = "0.11.2"
libafl_bolts = "0.11.2"
libafl_cc = "0.11.2"
libafl_qemu = { version = "0.11.2", features = ["usermode"] }
libafl_targets = {version = "0.11.2", features = ["pointer_maps", "sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog"] }


[lib]
name = "dimpl"
crate-type = ["staticlib"]
