[package]
name = "dimpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive", "string"] }
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", branch = "main" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git", branch = "main" }
libafl_cc = { git = "https://github.com/AFLplusplus/LibAFL.git", branch = "main" }
libafl_qemu = { git = "https://github.com/AFLplusplus/LibAFL.git", branch = "main", features = ["usermode"] }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", branch = "main", features = ["pointer_maps", "sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog"] }


[lib]
name = "dimpl"
crate-type = ["staticlib"]
